samples/_failures_safe/1761359823_3b76fc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f4b62aa9.c: In function ‘main’:
./samples/SAFE/__tmp_f4b62aa9.c:173:13: error: expected ‘:’ or ‘...’ at end of input
  173 |             case 4
      |             ^~~~
./samples/SAFE/__tmp_f4b62aa9.c:173:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f4b62aa9.c:173:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f4b62aa9.c:173:13: error: expected declaration or statement at end of input
